Avoid too wide view in desktop

--- a/src/fe/utils/global.css
+++ b/src/fe/utils/global.css
@@ -1,6 +1,7 @@
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+    max-width: 640px;
 }
 
 * {
